--- a/project3/css/main.css
+++ b/project3/css/main.css
@@ -8,14 +8,24 @@ header, footer{
 	text-align: center;
 }
 
+footer {
+	font-weight: bold;
+	font-size: 18px;
+	padding: .5em 0 .5em 0;
+}
+
+h1 {
+	padding: .5em 0 .5em 0;
+}
+
 h2 {
 	clear: both;
-	padding-top: 50px;
 }
 
 img {
 	float: left;
 	width: 10%;
+	margin-bottom: 20px;
 }
 
 p {
