--- a/project3/css/main.css
+++ b/project3/css/main.css
@@ -24,13 +24,13 @@ h2 {
 
 img {
 	float: left;
-	width: 10%;
 	margin-bottom: 20px;
+	margin-right: 20px;
 }
 
 p {
-	float: right;
-	width: 85%
+	margin-right: 10px;
+	text-align: justify;
 }
 
 form {
