--- a/project3/css/main.css
+++ b/project3/css/main.css
@@ -43,3 +43,28 @@ form {
 input[type=submit] {
 	margin: 10px 0px 10px 0px;
 }
+
+form:only-child {
+	text-align: left;
+	border: solid black;
+	width: 30%;
+	font-weight: bold;
+	margin: 20px auto 20px auto;
+}
+
+form p {
+	margin-left: 5px;
+}
+
+label {
+	margin-right: 10px;
+}
+
+input[type=radio], input[type=checkbox], input[type=text] {
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
+input[type=button] {
+	margin: 10px;
+}
